<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyTrack</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="LastExercise">上次運動時間日期</string>
    <string name="distance">距離(km)</string>
    <string name="time">時間(H:M:S)</string>
    <string name="velocity">速度(km/h)</string>
    <string name="average_velocity">平均速度(km/h)</string>
    <string name="run">跑步RUN</string>
    <string name="bike">騎車BIKE</string>
    <string name="start">開始</string>
    <string name="cancel">取消</string>
    <string name="pause">暫停</string>
    <string name="stop">停止</string>
    <string name="Continue">繼續</string>
    <string name="max_velocity">最大速度(km/h)</string>
    <string name="height">累積爬升高度(m)</string>
    <string name="altitude">海拔(m)</string>
    <string name="min_altitude">最低海拔(m)</string>
    <string name="max_altitude">最高海拔(m)</string>
    <string name="nameofsing">歌曲名稱</string>
    <string name="Prev">Prev</string>
    <string name="Next">Next</string>
    <string name="Play">Play</string>
    <string name="Stop">stop</string>
    <string name="singoption">歌曲設定</string>
    <string name="calories">消耗卡路里(Calories)</string>
    <string name="min_slope">最小坡度(%)</string>
    <string name="max_slope">最大坡度(%)</string>
    <string name="title_activity_start_exercise">StartExercise</string>
    <string name="title_activity_result">Result</string>
    <string name="title_activity_record">Record</string>
    <string name="title_activity_report">Report</string>
    <string name="app_id">374289906035869</string>
    <string name="Publish">發佈到塗鴉牆</string>

</resources>