<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    
         
        
            <TextView
            android:id="@+id/idSongName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nameofsing"
            android:textSize="20dp"/>
         <Spinner
            android:id="@+id/spinnner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
         </Spinner>           
            

            
    <TableLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:stretchColumns="0,1,2,3" >
         <TableRow>
               <Button
             android:id="@+id/idPrev"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/Prev"
             android:textSize="20sp" />

         <Button
             android:id="@+id/idNext"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/Next"
             android:textSize="20sp" />

         <Button
             android:id="@+id/idPlay"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/Play"
             android:textSize="20sp" />

         <Button
             android:id="@+id/idStop"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/Stop"
             android:textSize="20sp" />
             
         </TableRow>
         
         
    </TableLayout>
    
    
    
    
    
     

</LinearLayout>