<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MyProject" >
   
    <include
        android:id="@+id/googleMap"
        android:layout_width="match_parent"
        android:layout_height="210dp"       
        layout="@layout/googlemap" />   
    
    
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="         " /> 

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
         
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="       "
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/LastExercise"
                android:textSize="26sp" />
           
            
        </LinearLayout>
    </LinearLayout>
    
       
        
        <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">  
        
            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="       " />
            
            <TextView
            android:id="@+id/LastExercise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/LastExercise" />
        
        </LinearLayout>  
         
  
    
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="         " /> 
    

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="         " />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/distance" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="                      " />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/time" />
    </LinearLayout>
    
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="         " />     

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="         " />

        <TextView
            android:id="@+id/idDistance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0.00"
            android:textSize="32sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="                         " />

        <TextView
            android:id="@+id/idTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="00:00:00"
            android:textSize="32sp" />
    </LinearLayout>
    
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="8sp"
            android:text="         " />     

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >        

        <Button
            android:id="@+id/run_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="26sp" 
            android:text="@string/run"
            android:drawableLeft="@drawable/run_keeper_icon" />

        <Button
            android:id="@+id/bike_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="26sp"            
            android:text="@string/bike"
            android:drawableLeft="@drawable/bicycle_green_icon" />
    </LinearLayout>

</LinearLayout>